--- a/reset.css
+++ b/reset.css
@@ -10,6 +10,6 @@ ol,ul { list-style: none;}
 blockquote,q { quotes: none;}
 blockquote:before,blockquote:after,q:before,q:after { content: ''; content: none;}
 table {border-collapse: collapse; border-spacing: 0;}  
-*{ box-sizing: border-box;
-}
-    /* CSS Reset */
+*{ box-sizing: border-box;}
+nav a {text-decoration: none;} 
+/* CSS Reset */
